[package]
name = "rusty_scissors_pyo3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusty_scissors = "1.1.1"
pyo3 = { version = "0.20.0", features = ["extension-module"] }

[lib]
name = "rusty_scissors_pyo3_lib"
crate-type = ["cdylib"]
